Fixing spacing of artist and title on releaseTile - Spacing was off for split artists because of the wrapper - Adding a wrapper element to single artist links fixed the spacing mismatch

--- a/src/containers/ReleaseTile/index.css
+++ b/src/containers/ReleaseTile/index.css
@@ -18,9 +18,9 @@
 
 .releaseHeadline {
   display: flex;
-  flex-wrap: wrap;
+  flex-flow: row wrap;
+  justify-content: flex-start;
   font-size: 2vmin;
-  justify-self: flex-start;
   font-family: 'Karla', sans-serif;
   border-bottom: solid #ffcebe; 
 }
@@ -40,9 +40,6 @@
 
 .media {
   margin-top: 2vh;
-  /* display: flex;
-  flex-direction: column;
-  justify-items: flex-start; */
 }
 
 .mediaPlayer {
